--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -16,10 +16,12 @@
     <div class="content_div">
       <ion-label class="usernane">{{name}}</ion-label>
 
-      <ion-label class="location">
+      <!-- <ion-label class="location">
         {{email}}
+      </ion-label> -->
+ <ion-label class="location">
+        {{PhoneNum}}
       </ion-label>
-
 
       <div class="flex_div">
         <ion-label (click)="goToselectRestaurants()">{{'Add Review' | translate}}</ion-label>
